--- a/project.css
+++ b/project.css
@@ -5,7 +5,7 @@ Version:1.0.1
 License: https://www.wowthemes.net/freebies-license/
 */
 body{
-	background: url(./images/project-bg.jpg) no-repeat  ;
+	background: url(./images/project-bg-3.jpg) no-repeat  ;
 	background-size: 100%;
 	background-color: #fcfcfc;
   }
